@@ -1,6 +1,7 @@
 MicroEmulator
 
 - partially implemented Nokia UI API (thanks to Markus Heberling)
+- partially implemented Siemens API (thanks to Markus Heberling)
 - app: SWT port
 - app: opening initial MIDlet using jad file: java -jar me-app.jar mymidlet.jad
 - added socket connection in javax.microedition.io.*
